--- a/ai-code-review-guide.mdx
+++ b/ai-code-review-guide.mdx
@@ -1,15 +1,15 @@
 # The Future of Code Quality: How AI is Transforming the Review Process
 
 keywords:
-ai code review
-code review ai
-ai code analyzer
-ai code analysis
-ai code reviews
-code reviewer
-ai for code review
-ai powered code review
-ai based code review
+ai code review,
+code review ai,
+ai code analyzer,
+ai code analysis,
+ai code reviews,
+code reviewer,
+ai for code review,
+ai powered code review,
+ai based code review,
 is reviewing ai
 
 ## Introduction
